--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^8.0.0",
     "ngx-order-pipe": "^2.2.0",
+    "node-forge": "^1.3.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.2",
+    "@angular-devkit/build-angular": "^13.3.1",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
